Debug logo issue, stackoverflow solution worked. Add page navigation to menu. Correctly color for last section.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4100,7 +4100,7 @@ input, select, textarea {
 	@media screen and (max-width: 1280px) {
 
 		#footer {
-			background-color: #2e3141;
+			background-color: #3f4e85;
 			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
 			background-size: auto,
  cover;
